Haciendo la migra que se me olvido y arrglando algunos tipo de datos de la model

--- a/Parcial2_JosueRusso/Server/appsettings.json
+++ b/Parcial2_JosueRusso/Server/appsettings.json
@@ -1,5 +1,7 @@
 {
-  
+  "ConnectionStrings": {
+    "ConStr": "Data Source = Data\\Parcal2.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
