--- a/Parcial2_JosueRusso/Server/Parcial2_JosueRusso.Server.csproj
+++ b/Parcial2_JosueRusso/Server/Parcial2_JosueRusso.Server.csproj
@@ -20,5 +20,9 @@
     <ProjectReference Include="..\Shared\Parcial2_JosueRusso.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 
 </Project>
